test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/skip-generate/cpol-any-match-resources-in-namespaces-with-wildcard/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-label-app-5
spec:
  rules:
    - name: check-label-app
      match:
        any:
        - resources:
            kinds:
            - Pod
            namespaces: 
            - "prod-*"
            - "staging"
      validate:
        failureAction: Audit
        cel:
          generate: true
          expressions:
            - expression: "'app' in object.metadata.labels"
