test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/skip-generate/cpol-any-match-resources-in-namespaces-with-wildcard/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-label-app-5
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
  validatingadmissionpolicy:
    generated: false
